@@ -6,33 +6,65 @@ Transform subclasses for basic coordinate transforms
 import numpy as np
 from .core import Transform
 
+ 
+       
+    
 class Linear(Transform):
     '''
     Linear - linear transforms
     
-    Linear tranforms consist of an offset and a matrix operation.
-    For convenience, two offsets are allowed: a pre-offset and a post-offset.
-    the pre-offset, post-offset, and matrix, if present, must all be 
-    ndarrays.  They must agree dimensionally: the pre must be a vector with 
-    the same size as the matrix's 0 dim, and the post must be a vector with
-    the same size as the matrix's 1 dim.
+    Linear tranforms consist of an offset and a matrix operation.  it 
+    implements the transform:
+        
+        data_out = (post) + (matrix x (data + pre))
+        
+    where post, pre, data, and data_out are all column vectors (or broadcast
+    arrays of column vectors), and matrix is an NxM matrix.  The Transform
+    then accepts N-vectors and returns M-vectors.
+    
+    The parameters are pre, post, and matrix; they are all optional.  The
+    input and output dimensionality of the transform are calculated at 
+    construction time from whichever parameters you supply -- offsets and/or
+    matrix.  They must agree dimensionally (e.g., matrix column count must
+    match pre-offset vector size).
+    
+    The inverse transform is valid if and only if the matrix is invertible. 
+    
+    As with other Transforms, additional dimensions in the input data vectors 
+    are ignored -- so applying a 2-D Linear transform to data comprising 
+    3-vectors results in the first two components being transformed, and the 
+    third component being passed through unchanged.
+    
+    Notes
+    -----
+    
+    Several subclasses enable simpler specification of common linear 
+    transformations such as scaling and rotation.
+    
+    Linear transformation is overspecified by including both pre and post,
+    but in practice it's convenient to be able to work in either the matrix-
+    input coordinates or matrix-output coordinates when specifying an offset.
+    
     
     Parameters
     ----------
-    pre : numpy.ndarray
+    *pre : numpy.ndarray (optional; default = 0)
         Optional; if present must be a vector.  Offset vector to be added
         to the input data before hitting with the matrix
         
-    post : numpy.ndarray
+    *post : numpy.ndarray (optional; default = 0)
         Optional; if present must be a vector.  Offset vector to be added
         to the return data after hitting with the matrix
         
-    matrix : numpy.ndarray
-        Optional; if present must be a 2-D array. 
+    *matrix : numpy.ndarray (optional; default = identity)
+        Optional; if present must be a 2-D array.  As always in numpy, the
+        matrix is addressed in (row,column) format -- so if you use 
+        nested-brackets notation for np.array(), then the innermost vectors
+        are rows of the matrix.
 
     '''
     
-    def __init__(self,
+    def __init__(self, *,
                  pre    = None, post   = None,\
                  matrix = None,\
                  iunit  = None, ounit  = None,\
@@ -42,17 +74,10 @@ class Linear(Transform):
         idim = None
         odim = None
         
-        ### Parse arguments.  Pre, Matrix, Post.
-        ### This takes a fair few lines but is straightforward:
-        ### if there is a matrix, check that it's a 2-D array and 
-        ### set the idim/odim values from it -- remembering that 
-        ### Python lists matrix dims in mathematical (row,column) order.
-        ### Then deal with the offsets and either set or check the idim/odim
-        ### parameters for consistency with the matrix.
-        
+     
         ### Check if we got a matrix.  if we did, make sure it's 2-D and use
         ### it to set the idim and odim.
-        if( np.all( matrix != None ) ):
+        if( matrix is not None ):   
             if( isinstance( matrix, np.ndarray ) ):
                 if( len( matrix.shape ) == 2 ):
                     odim,idim = matrix.shape
@@ -62,44 +87,21 @@ class Linear(Transform):
                 raise ValueError("Linear: matrix must be a 2D numpy.ndarray or None")
         
         ### Now validate the pre and post, if present
-        if( np.all( pre != None ) ):
-            if( isinstance( pre, np.ndarray ) ):
-                if( len( pre.shape ) == 1 ):
-                    if( idim != None ):
-                        if( idim != pre.shape[0] ):
-                            raise ValueError("Linear: pre-offset and matrix have different sizes")
-                    else:
-                        idim = pre.shape[0]
-                else:
-                    raise ValueError("Linear: pre-offset must be a 1-D vector")
-            else:
-                raise ValueError("Linear: pre-offset must be a 1-D numpy.ndarray or None")
-        
-        if( np.all( post != None ) ):
-            if( isinstance( post, np.ndarray ) ):
-                if( len( post.shape ) == 1 ) :
-                    if( odim != None ):
-                        if( odim != post.shape[0] ) :
-                            raise ValueError("Linear: post-offset and matrix have different sizes")
-                    else:
-                        odim = post.shape[0]
-                else:
-                    raise ValueError("Linear: post-offset must be a 1-D vector")
-            else:
-                raise ValueError("Linear: post-offset must be a 1-D numpy.ndarray or None")
+        idim = _parse_prepost( idim, pre,  'Linear', 'Pre-offset',  'idim' )
+        odim = _parse_prepost( odim, post, 'Linear', 'Post-offset', 'odim' )
                 
-        if( np.all( matrix==None ) ):
-            if( odim == None ):
+        if( matrix is not None ):
+            if( odim is None ):
                 odim = idim
-            elif( idim == None ):
+            elif( idim is None ):
                 idim = odim
             elif( idim != odim ):
                 raise ValueError("Linear: idim and odim must match if no matrix is supplied")
       
         ### Finally - if no idim and odim, default to 2
-        if( idim==None ):
+        if( idim is None ):
             idim = 2
-        if( odim==None ):
+        if( odim is None ):
             odim = 2
 
    
@@ -133,59 +135,214 @@ class Linear(Transform):
         return (super().__str__())
     
     def _forward( self, data: np.ndarray ):
-        if( data.shape[0] < self.idim ):
+        if( data.shape[-1] < self.idim ):
             raise ValueError('This Linear needs {self.idim}-vecs; source has {data.shape[0]}-vecs')
         
-        data0 = data[0:self.idim]
+        ## Chop ending vector elements off if necessary
+        data0 = data[...,0:self.idim]
         
-        if( isinstance(self.params['pre'], np.ndarray)):
+        ## Handle pre-offset
+        if( self.params['pre'] is not None ):
             data0 = data0 + self.params['pre']
         
+        ## Handle matrix
         m = self.params['matrix']
-        if( isinstance(m, np.ndarray) ):
-            data0 = np.expand_dims(data0,1)  # convert vectors to Mx1
+        if( m is not None ):
+            data0 = np.expand_dims(data0,-1)  # convert vectors to Mx1
             data0 = np.matmul( m, data0 ) 
-            data0 = data0[:,0]               # convert back to vectors
+            data0 = data0[...,:,0]               # convert back to vectors
         
-        if( isinstance( self.params['post'], np.ndarray ) ):
+        ## Handle post-offset
+        if( self.params['post'] is not None ):
             data0 = data0 + self.params['post']
         
-        if( data.shape[0] > self.idim ):
-            return( np.append( data0, data[self.idim:], axis=0 ) )
+        ## Handle re-attaching longer vector elements if necessary, and return
+        if( data.shape[-1] > self.idim ):        
+            return( np.append( data0, data[...,self.idim:], axis=-1 ) )
         else:
             return( data0 )
 
     def _reverse( self, data: np.ndarray ):
-        
-        if( data.shape[0] < self.odim ):
+        if( data.shape[-1] < self.odim ):
             raise ValueError('This reverse-Linear needs {self.odim}-vecs; source has {data.shape[0]}-vecs')
         
-        data0 = data[0:self.odim]
+        ## Chop ending vector elements off if necessary
+        data0 = data[...,0:self.odim]
         
-        if( isinstance( self.params['post'], np.ndarray ) ):
+        ## Handle reversing the post-offset
+        if( self.params['post'] is not None ):
             data0 = data0 - self.params['post']
         
+        ## Handle inverse-matrix
         m = self.params['matinv']
-        if( isinstance( m, np.ndarray ) ):
-            data0 = np_expand_dims(data0,1)
+        if( m is not None ):
+            data0 = np.expand_dims(data0,-1)
             data0 = np.matmul( m, data0 )
-            data0 = data0[:,0]
+            data0 = data0[...,:,0]
             
-        if( isinstance( self.params['pre'], np.ndarray ) ):
+        ## Handle reversing the pre-offset
+        if( self.params['pre'] is not None ):
             data0 = data0 - self.params['pre']
-        
-        if( data.shape[0] > self.odim ):
-            return( np.append( data0, data[self.odim:], axis=0 ) )
+       
+        ## Reattach the longer vector elements if necessary, and return
+        if( data.shape[-1] > self.odim ):
+            return( np.append( data0, data[...,self.odim:], axis=-1 ) )
         else:
             return( data0 )
+ 
         
-        
-        
+ 
     
+##########
+# Subclassses of Linear (e.g. scale, rot)
+ 
+class Scale(Linear):
+    '''
+    Scale - linear transform that just stretches vectors
+    
+    Scale transforms implement linear transforms of the form:
+        
+        data_out = (post) + (dmatrix x (data + pre))
+    
+    where post, pre, data, and data_out are column vectors, and dmatrix is a 
+    diagonal square matrix.  You specify the trace of dmatrix.  
+    
+    As a special case, you can specify a scalar for dmatrix so long as
+    you also specify a dimension some other way.  Unlike Linear itself (which
+    selects its dimensionality implicitly) you can specify the dimension
+    of the operator with the "d" parameter.
+    
+    Examples
+    --------
+    
+       a = t.Scale( 3, 2 )            # triple the length of a vector in 2-D
+       a = t.Scale( 3, d=2 )          # same but maybe clearer
+       a = t.Scale( np.array([1,3]) ) # Triple the Y component of a vector
+    
+    Parameters
+    ----------
+    
+    scale : numpy.ndarray or scalar (positional or keyword)
+        This is either an ndarray vector representing the trace of the 
+        scale matrix, or a scalar for a uniform scale.
+        
+    d : int (optional; positional or keyword)
+        This is an optional dimension specifier in case you pass in a scalar
+        and no other dimensionality hints.
+    
+    pre : numpy.ndarray (optional; default = 0)
+        Optional; if present must be a vector.  Offset vector to be added to 
+        the input data before hitting with the scale matrix
+        
+    post : numpy.ndarray (optional; default = 0)
+        Optional; if present must be a vector.  Offset vector to be added to
+        the return data after hitting with the scale matrix
+    '''
+    
+    def __init__(self,                                     \
+                 /, scale: np.ndarray,  d=None, \
+                 *, post=None, pre=None,
+                 iunit=None, ounit=None,
+                 itype=None, otype=None
+                 ):
        
+        d = _parse_prepost( d, pre,  'Scale', 'Pre-offset',  'd' )
+        d = _parse_prepost( d, post, 'Scale', 'Post-offset', 'd' )
+     
+        if( not( isinstance( scale, np.ndarray ) ) ) :
+            scale = np.array(scale)
+        if(len(scale.shape) > 1):
+           raise ValueError('Scale: scale parameter must be scalar or vector')
+           
+        if( d is not Null ):
+            if(scale.shape[0] != d  and  scale.shape[0] != 1):
+                raise ValueError('Scale d must agree with size of scale vector')
+            if(scale.shape[0] == 1):
+                scale = scale + np.zeros(d) # force broadcast to correct size
+        else:
+            d = scale.shape[0]
             
+        m = np.zeros([d,d])
+        for i in range(d):
+            m[i,i]=scale[i]
+            
+        m1 = zeros(d,d)
+        if(all(scale!=0)):
+            for i in range(d):
+                m1[i,i]=1.0/scale[i]
+        
+        self.idim       = d
+        self.odim       = d
+        self.no_forward = False
+        self.no_reverse = (any(scale == 0))
+        self.iunit      = iunit
+        self.ounit      = ounit
+        self.itype      = itype
+        self.otype      = otype
+        self.params = {
+            'pre': pre,    \
+            'post': post,  \
+            'matrix' : m,  \
+            'matinv' : m1, \
+            }
+    
+    def __str__(self):
+        self.strtmp = "Linear/Scale"
+        return (super().__str__())
     
     
+        
+        
+            
+#########################
+# Helper functions - module scope; not part of a particular object
+
+
+def _parse_prepost( dimspec, vec, objname, prepostname, dimname ) :
+    '''
+    _parse_prepost - internal routine to parse a pre-offset or post-offset
+    vector's dims during object construction
     
     
 
+    Parameters
+    ----------
+    dimspec : int or None
+        DESCRIPTION.
+    vec : np.ndarray or None
+        DESCRIPTION.
+    objname : string
+        the name of the object doing the parsing (for exceptions)
+    prepostname : string
+        'pre' or post' - vector name
+
+    Returns
+    -------
+    the dimensionality from the dimspec or vec size.
+
+    '''
+    if( dimspec is not None   and  not isinstance( dimspec, np.ndarray) ):
+        dimspec = np.array(dimspec)
+        
+    if( dimspec is not None and dimspec.size>1 ):
+        raise ValueError(f"{objname}: {dimname} must be a scalar")
+        
+    if( vec is not None ):
+        if( not isinstance( vec, np.ndarray ) ):
+            raise ValueError(f"{objname}: {prepostname} must be a 1-D numpy.ndarray vector or None")
+        if( len( vec.shape ) != 1 ):
+            raise ValueError(f"{objname}: {prepostname} must be a 1-D vector")
+        if( (dimspec is not None)  and (dimspec != vec.size[0]) ):
+            raise ValueError(f"{objname}: {prepostname} size must match {dimname}")
+        dimspec = vec.shape[0]
+        
+    return dimspec
+    
+                
+            
+                
+            
+                
+        
+
+        
